--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="background-img"></div>
     <script src="/bundle.js"></script>
   </body>
 </html>
